--- a/custom.org
+++ b/custom.org
@@ -156,8 +156,7 @@ function.
 
     (use-package package
       :config
-      (add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
-      (package-initialize))
+      (add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t))
   #+END_SRC
 
 * Performance Tuning
